--- a/flag-project/src/index.css
+++ b/flag-project/src/index.css
@@ -4,7 +4,6 @@
 
   color-scheme: light dark;
   color: black;
-  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
